microshift-manifests/console/openshift-console-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openshift-console
  namespace: openshift-console
  labels:
    app: openshift-console
spec:
  replicas: 1
  selector:
    matchLabels:
      app: openshift-console
  template:
    metadata:
      labels:
        app: openshift-console
    spec:
      serviceAccountName: openshift-console
      securityContext:
        runAsUser: 1001
        runAsGroup: 1001
        fsGroup: 1001
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: console
          image: quay.io/openshift/origin-console
          ports:
            - containerPort: 9000
              name: http
          volumeMounts:
            - name: k8s-ca-volume
              mountPath: /etc/ssl/certs/kubernetes-ca.crt
              subPath: ca.crt
      volumes:
        - name: k8s-ca-volume
          secret:
            secretName: openshift-console-secret
