microshift-manifests/console/openshift-console-service.yml
apiVersion: v1
kind: Service
metadata:
  name: openshift-console
  namespace: openshift-console
  labels:
    app: openshift-console
spec:
  ports:
  - name: console-http
    port: 9000
  selector:
    app: openshift-console
