microshift-manifests/console/openshift-console-route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: openshift-console-route
  namespace: openshift-console
spec:
  to:
    kind: Service
    name: openshift-console
  port:
    targetPort: console-http
